--- a/project1/src/app/header/header.component.html
+++ b/project1/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="topnav">
+    <a  class="active">Image Annotation Tool</a>
+</div>
+<ul class="donate-now">
+  <li>
+    <input type="radio" id="a25" name="amount" />
+    <label for="a25">Intersting</label>
+  </li>
+  <li>
+    <input type="radio" id="a50" name="amount" />
+    <label for="a50">Unintersting</label>
+  </li>
+</ul>
