--- a/project1/src/app/body/body.component.css
+++ b/project1/src/app/body/body.component.css
@@ -1,6 +1,11 @@
 .footer {
-    background-color: lightslategrey;
-    overflow: hidden;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color:darkolivegreen;
+  text-align: center;
   }
   
 /* Style the links inside the navigation bar */
@@ -24,6 +29,7 @@ font-size: 17px;
     margin: -100px 0 0 -150px;
     background:darkgoldenrod;
   }
+  
   #btn
   {
     float: right;
