--- a/project1/src/app/body/body.component.css
+++ b/project1/src/app/body/body.component.css
@@ -34,3 +34,53 @@ font-size: 17px;
   {
     float: right;
   }
+
+  .donate-now {
+    list-style-type: none;
+    margin: 25px 0 0 0;
+    padding: 0;
+  }
+  
+  .donate-now li {
+    float: left;
+    margin: 0 5px 0 0;
+    width: 100px;
+    height: 40px;
+    position: relative;
+  }
+  
+  .donate-now label,
+  .donate-now input {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    right: 0;
+    bottom: 5px;
+  }
+  
+  .donate-now input[type="radio"] {
+    opacity: 0.01;
+    z-index: 100;
+  }
+  
+  .donate-now input[type="radio"]:checked+label,
+  .Checked+label {
+    background-color: olivedrab;
+  }
+  
+  .donate-now label {
+    padding: 5px;
+    border: 1px solid #CCC;
+    cursor: pointer;
+    z-index: 90;
+  }
+  
+  .donate-now label:hover {
+    background: #DDD;
+  }
+  .toolbar {
+    background-color:darkslategrey;
+    overflow: hidden;
+  }
+  
